# SO100-Simulation

./: .gitignore  README.md  pyproject.toml  requirements.txt
gym_so100/: env.py
scripts/: evaluate_remote_policy.py  example.py
